resolved small issues in code