@@ -6,7 +6,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class FilmService {
-    private List<Film> films;
+    private final List<Film> films;
 
     public FilmService(List<Film> films) {
         this.films = films;
@@ -15,19 +15,21 @@ public class FilmService {
     public List<Film> searchByTitle(String title) {
         return films.stream()
                 .filter(film -> film.getTitle().toLowerCase().contains(title.toLowerCase()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<Film> searchByDirector ( String director){
+    public List<Film> searchByDirector(String director) {
         return films.stream()
                 .filter(film -> film.getDirector().equalsIgnoreCase(director))
-                .collect(Collectors.toList());
+                .toList();
 
 
     }
 
-    public List<Film> searchByYear (int year){
+    public List<Film> searchByYear(int year) {
         return films.stream()
                 .filter(film -> film.getReleaseYear() == year)
-                .collect(Collectors.toList());
+                .toList();
+
+    }
 }
